# lc-crypto

./: .gitignore  Cargo.toml  Makefile.in  README.md  configure  configure.ac
.github/workflows/: audit.yml  autotools.yml  rust.yml
asm/: configure.ac
export-notifications/: US
lc-crypto-bignum/: Cargo.toml
lc-crypto-bignum/src/: lib.rs
lc-crypto-digest/: Cargo.toml
lc-crypto-digest/src/: lib.rs  mac.rs  raw.rs  traits.rs
lc-crypto-digest/src/raw/: sha1.rs  sha2.rs
lc-crypto-primitives/: Cargo.toml
lc-crypto-primitives/benches/: bench-asm.rs
lc-crypto-primitives/src/: array.rs  asm.rs  cmp.rs  detect.rs  digest.rs  error.rs  lib.rs  mem.rs  rand.rs  test.rs  traits.rs
lc-crypto-primitives/src/cmp/: asm.rs
lc-crypto-primitives/src/detect/: x86.rs
lc-crypto-primitives/src/error/: sys.rs
lc-crypto-rand/: Cargo.toml
lc-crypto-rand/src/: lib.rs  system.rs  traits.rs
lc-crypto-rand/src/system/: os.rs  x86.rs
lc-crypto-secret/: Cargo.toml
lc-crypto-secret/src/: array_vec.rs  lib.rs  secret.rs  traits.rs
src/: array.rs  bignum.rs  cmp.rs  digest.rs  error.rs  lib.rs  mem.rs  rand.rs  secret.rs  symm.rs  traits.rs  util.rs
src/detect/: x86.rs
src/digest/: raw.rs  sha1.rs  sha2.rs
src/digest/raw/: sha1.rs  sha2.rs  sha3.rs
src/digest/sha1/: x86_64.rs
src/rand/: lilium.rs  system.rs  x86.rs
src/rand/system/: linux.rs  x86.rs
src/symm/: aes.rs
tests/: digest.rs
tests/digest/: generate-test-msgs.sh
tests/digest/answers/: sha1  sha224  sha256  sha384  sha3_224  sha3_256  sha3_384  sha3_512  sha512  sha512_224  sha512_256  shake128_128  shake128_192  shake128_256  shake128_32  shake128_64  shake256_128  shake256_192  shake256_256  shake256_32  shake256_64
tests/digest/test-files/: tv-random-1024  tv-random-16  tv-random-256  tv-random-32  tv-random-512
