[workspace]
members = ["lc-crypto-primitives", "lc-crypto-secret"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
libc = { version = "0.2", default-features = false }
bytemuck = { git = "https://github.com/Lokathor/bytemuck", rev = "6751565", version = "1.21", features = [
    "min_const_generics",
    "must_cast",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
    "const_zeroed",
    "pod_saturating",
] }
lc-crypto-primitives = { path = "lc-crypto-primitives" }
cfg-match = "0.2.1"
concat-idents = "1.1"
