[workspace]
members = [
    "lc-crypto-bignum",
    "lc-crypto-digest",
    "lc-crypto-primitives",
    "lc-crypto-rand",
    "lc-crypto-secret",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bytemuck = { git = "https://github.com/Lokathor/bytemuck", version = "1.21", features = [
    "min_const_generics",
    "must_cast",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
    "const_zeroed",
    "pod_saturating",
    "derive",
] }
cfg-match = "0.2.1"
concat-idents = "1.1"
lilium-sys = { git = "https://github.com/LiliumOS/lilium-sys.git" }

# Local packages
lc-crypto-primitives = { path = "lc-crypto-primitives" }
lc-crypto-secret = { path = "lc-crypto-secret" }
lc-crypto-rand = { path = "lc-crypto-rand" }
