[package]
version = "0.1.0"
edition = "2024"
name = "lc-crypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { git = "https://github.com/Lokathor/bytemuck", version = "1.21", features = [
    "min_const_generics",
    "must_cast",
    "zeroable_maybe_uninit",
    "zeroable_atomics",
    "const_zeroed",
    "pod_saturating",
    "derive",
] }
cfg-match = "0.2.1"
concat-idents = "1.1"
spin = { version = "0.10.0", default-features = false, features = [
    "once",
], optional = true }

[features]
alloc = ["bytemuck/extern_crate_alloc"]
std = ["spin?/std", "bytemuck/extern_crate_std", "cache"]
error-track_caller = []
cache = ["__spin"]

# Nightly features. Exposes a public API that requires use of an unstable feature
nightly-docs = []
nightly-std-io_error_more = []
nightly-allocator_api = []

# 
default = [
    "bignum",
    "default-digest",
    "default-rand",
    "default-symm",
    "default-asymm",
    "runtime-detect",
]

# Enable runtime switches for assembly code
runtime-detect = ["__spin"]

# Parts of the library
bignum = []
digest = []
rand = []
symm = []
asymm = []

# Digest Algorithms
sha1 = ["digest"]
sha2 = ["digest"]
sha3 = ["digest"]

default-digest = ["digest", "sha1", "sha2", "sha3"]
all-digest = ["default-digest"]

# Random Number Generators
use-insecure-hw-rng = []

default-rand = ["rand"]
all-rand = ["default-rand"]

# Symmetric Algorithms


default-symm = ["symm"]
all-symm = ["default-symm"]

# Asymmetric Algorithms


# Internal features
# Not Public API

__spin = ["dep:spin"]

default-asymm = ["asymm"]
all-asymm = ["default-asymm"]

[target.'cfg(target_os = "linux")'.dependencies]
linux-errno = "1.0.1"

[target.'cfg(target_os = "lilium")'.dependencies]
lilium-sys.git = "https://github.com/LiliumOS/lilium-sys"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(allow_insecure_hw_rand)']
