[package]
name = "lc-crypto-digest"
version.workspace = true
edition.workspace = true

[dependencies]
lc-crypto-primitives.workspace = true
lc-crypto-secret.workspace = true
bytemuck.workspace = true

[features]
sha3 = []
sha2 = []
sha1 = []
insecure-sha1 = ["sha2"]
blake2 = []

default = ["sha1", "sha2", "sha3", "blake2"]
alloc = []
std = ["alloc"]
