[package]
name = "lc-crypto-primitives"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
cfg-match.workspace = true
spin = { version = "0.10.0", default-features = false, features = ["once"] }

[features]
alloc = ["bytemuck/extern_crate_alloc"]
std = ["spin/std", "bytemuck/extern_crate_std"]
error-track_caller = []
nightly-docs = []
nightly-std-io_error_more = []

[target.'cfg(target_os = "linux")'.dependencies]
linux-errno = "1.0.1"

[target.'cfg(target_os = "lilium")'.dependencies]
lilium-sys.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench-asm"
harness = false
src = "bench/bench-asm.rs"
